Mário/Tec/Avião/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
/Applications/Greenfoot 3.0.2/Greenfoot.app/Contents/Frameworks/jdk.framework/Versions/A/Contents/Home/bin/javadoc
-author
-version
-nodeprecated
-protected
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
/Applications/Greenfoot 3.0.2/Greenfoot.app/Contents/Resources/Java/extensions/greenfoot.jar:/Applications/Greenfoot 3.0.2/Greenfoot.app/Contents/Resources/Java/bluejcore.jar:/Applications/Greenfoot 3.0.2/Greenfoot.app/Contents/Resources/Java/bluejeditor.jar:/Applications/Greenfoot 3.0.2/Greenfoot.app/Contents/Resources/Java/bluejext.jar:/Applications/Greenfoot 3.0.2/Greenfoot.app/Contents/Resources/Java/AppleJavaExtensions.jar:/Applications/Greenfoot 3.0.2/Greenfoot.app/Contents/Resources/Java/junit-4.11.jar:/Applications/Greenfoot 3.0.2/Greenfoot.app/Contents/Resources/Java/hamcrest-core-1.3.jar:/Applications/Greenfoot 3.0.2/Greenfoot.app/Contents/Resources/Java/bluej.jar:/Applications/Greenfoot 3.0.2/Greenfoot.app/Contents/Resources/Java/commons-httpclient-3.1.jar:/Applications/Greenfoot 3.0.2/Greenfoot.app/Contents/Resources/Java/commons-logging-api-1.1.2.jar:/Applications/Greenfoot 3.0.2/Greenfoot.app/Contents/Resources/Java/commons-codec-1.3.jar:/Applications/Greenfoot 3.0.2/Greenfoot.app/Contents/Resources/Java/jl1.0.1.jar:/Applications/Greenfoot 3.0.2/Greenfoot.app/Contents/Resources/Java/opencsv-2.3.jar:/Applications/Greenfoot 3.0.2/Greenfoot.app/Contents/Resources/Java/xom-1.2.9.jar:/Applications/Greenfoot 3.0.2/Greenfoot.app/Contents/Resources/Java/jna-4.2.0.jar:/Applications/Greenfoot 3.0.2/Greenfoot.app/Contents/Resources/Java/jna-platform-4.2.0.jar:/Applications/Greenfoot 3.0.2/Greenfoot.app/Contents/Resources/Java/guava-17.0.jar:/Applications/Greenfoot 3.0.2/Greenfoot.app/Contents/Resources/Java/javassist-3.18.0.jar:/Applications/Greenfoot 3.0.2/Greenfoot.app/Contents/Resources/Java/commons-vfs2-2.0.jar:/Applications/Greenfoot 3.0.2/Greenfoot.app/Contents/Resources/Java/httpclient-4.1.1.jar:/Applications/Greenfoot 3.0.2/Greenfoot.app/Contents/Resources/Java/httpcore-4.1.jar:/Applications/Greenfoot 3.0.2/Greenfoot.app/Contents/Resources/Java/httpmime-4.1.1.jar:/Users/tiagoketzer/Desktop/Unifil/Unifil 2016/Mário/Tec/Avião
-d
/Users/tiagoketzer/Desktop/Unifil/Unifil 2016/Mário/Tec/Avião/doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
/Applications/Greenfoot 3.0.2/Greenfoot.app/Contents/Resources/Java/bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
/Users/tiagoketzer/Desktop/Unifil/Unifil 2016/Mário/Tec/Avião/Aviao.java
<---- end of javadoc command ---->
Loading source file /Users/tiagoketzer/Desktop/Unifil/Unifil 2016/Mário/Tec/Avião/Aviao.java...
/Users/tiagoketzer/Desktop/Unifil/Unifil 2016/Mário/Tec/Avião/Aviao.java:19: error: illegal start of expression
    }    
    ^
/Users/tiagoketzer/Desktop/Unifil/Unifil 2016/Mário/Tec/Avião/Aviao.java:20: error: illegal start of statement
}
^
/Users/tiagoketzer/Desktop/Unifil/Unifil 2016/Mário/Tec/Avião/Aviao.java:20: error: reached end of file while parsing
}
 ^
3 errors
